--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,12 @@ dependencies:
   equatable: ^2.0.7
   shared_preferences: ^2.2.2
   logger: ^2.4.0
+  mysql1: ^0.20.0
+  intl: ^0.19.0
+  csv: ^6.0.0
+  path_provider: ^2.1.1
+  flutter_local_notifications: ^17.0.0
+  workmanager: ^0.9.0
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +31,18 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/fonts/
+
+  # Fonts will be added later with proper font files
+  # fonts:
+  #   - family: Vazirmatn
+  #     fonts:
+  #       - asset: assets/fonts/Vazirmatn-Regular.ttf
+  #       - asset: assets/fonts/Vazirmatn-Bold.ttf
+  #         weight: 700
+  #       - asset: assets/fonts/Vazirmatn-Medium.ttf
+  #         weight: 500
+  #       - asset: assets/fonts/Vazirmatn-Light.ttf
+  #         weight: 300
