--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   dio: ^5.9.0
   bloc: ^9.1.0
   flutter_bloc: ^9.1.0
@@ -18,7 +20,7 @@ dependencies:
   shared_preferences: ^2.2.2
   logger: ^2.4.0
   mysql1: ^0.20.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   csv: ^6.0.0
   path_provider: ^2.1.1
   flutter_local_notifications: ^17.0.0
