--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   path_provider: ^2.1.1
   flutter_local_notifications: ^17.0.0
   workmanager: ^0.9.0
+  just_audio: ^0.9.36
+  audio_session: ^0.1.7
 
 dev_dependencies:
   flutter_test:
