--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   workmanager: ^0.9.0
   just_audio: ^0.9.36
   audio_session: ^0.1.7
+  sqlite3: ^2.2.0
 
 dev_dependencies:
   flutter_test:
