--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   equatable: ^2.0.7
   shared_preferences: ^2.2.2
   logger: ^2.4.0
-  mysql1: ^0.20.0
   intl: ^0.20.2
   csv: ^6.0.0
   path_provider: ^2.1.1
@@ -36,6 +35,12 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
   test: ^1.21.0
+  mockito: ^5.4.4
+  integration_test:
+    sdk: flutter
+  benchmark_harness: ^2.2.1
+  http_mock_adapter: ^0.4.2
+  build_runner: ^2.10.4
 
 flutter:
   generate: true
@@ -43,6 +48,7 @@ flutter:
 
   assets:
     - assets/fonts/
+    - assets/scripts/
 
   # Fonts will be added later with proper font files
   # fonts:
