--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   test: ^1.21.0
   mockito: ^5.4.4
+  mocktail: ^1.0.4
   integration_test:
     sdk: flutter
   benchmark_harness: ^2.2.1
